--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "license": "MIT",
   "repository": "github:owodunni/multi_module_npm",
   "scripts": {
-    "compile": "tsc --build tsconfig.build.json"
+    "compile": "tsc --build tsconfig.build.json",
+    "postinstall": "lerna run prepare && npm run compile",
+    "test": "jest --verbose"
   },
   "dependencies": {
     "multi-counter": "file:packages/multi-counter"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "jest": "^27.5.1",
+    "jest-config": "^27.5.1",
     "lerna": "^4.0.0",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
+  },
+  "jest": {
+    "projects": [
+      "<rootDir>/packages/*/jest.config.js"
+    ]
   }
 }
